2015-02-10  Andre Heinecke <aheinecke@greenbone.net>

	Install public headers

	* CMakeLists.txt: Set includedir similar to openvas-libaries.
	* wmi/CMakeLists.txt: Install public headers.

2015-02-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version to 1.0.1.

2015-02-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-smb 1.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Switch version scheme, set version to 1.0.0.

2015-01-29 Andre Heinecke <aheinecke@intevation.de>

	Remove duplicated rpc interface inclusion.

	* samba/CMakeLists.txt (RPC_GEN_SRC): sort -u
	* samba/CMakeLists.txt (RPC_GEN_HEADERS): Filter out
	headers for sources with _c.c suffix.

2015-01-28 Andre Heinecke <aheinecke@intevation.de>

	Add WMI command line tool.

	* wmi/wmic.c: New. From wmi-1.3.14.
	* wmi/CMakeLists.txt: Build and install wmic.

2015-01-28 Andre Heinecke <aheinecke@intevation.de>

	Add support for additional rpc interfaces.

	* samba/lib/compression/mszip.c: New. From wmi-1.3.14.
	* samba/CMakeLists.txt: Extend generated idl
	tables. Add additional files.
	* samba/librpc/rpc/table.c (idl_iface_by_name),
	(idl_iface_by_uuid): Add warning if lookup fails.

2015-01-26 Andre Heinecke <aheinecke@intevation.de>

	* winexe/winexe.c (main), winexe/wincmd.c (wincmd):
	Disable ntlmv2 if requested.
	* samba/param/loadparm.c (init_globals): Make ntlmv2
	client auth default.

2015-01-26 Andre Heinecke <aheinecke@intevation.de>

	* winexe/winexe.c (parse_args),
	winexe/wincmd.c (parse_args): Add ntlmv1 option.
	* winexe/wincmd.c (wincmd),
	winexe/winexe.c (main): Enable ntlmv2 authentication
	by default.

2015-01-26 Andre Heinecke <aheinecke@intevation.de>

	* winexe/winexesvc_exe.c: Removed. This file is generated.

2015-01-23 Andre Heinecke <aheinecke@intevation.de>

	* samba/CMakeLists.txt: Clear up comments.
	* wmi/CMakeLists.txt: Remove obsolete include dirs.