@@ -1,5 +1,12 @@
 2015-02-10  Andre Heinecke <aheinecke@greenbone.net>
 
+	Add includedir to pkg-config.
+
+	* libopenvas_wmiclient.pc.in, libopenvas_wincmd.pc.in:
+	Add include directory to CFLAGS.
+
+2015-02-10  Andre Heinecke <aheinecke@greenbone.net>
+
 	Install public headers
 
 	* CMakeLists.txt: Set includedir similar to openvas-libaries.
